Disable CJK specific generic font families for monospace on Android

Before this patch, when the content locale is one of CJK, Android maps
all generic families to what Skia matchFamilyStyleCharacter() API
returns. This API can find one default font for the specified locale,
but disregards which generic font family was used.

This patch disables the behavior for "monospace", where using the
monospace ASCII glyphs is more important than using the font that has
good coverage of the specified locale.

When characters outside of the monospace font were used, system
fallback can still help to render the characters.

BUG=640077

Review-Url: https://codereview.chromium.org/2288383002
Cr-Commit-Position: refs/heads/master@{#415287}

Former-commit-id: 96e2aeba7ca3d4398a2cfb44f2b864dfa8ea2ad9